--- a/templates/rate_form.html
+++ b/templates/rate_form.html
@@ -16,7 +16,7 @@
 </form>
 
 {% for r in all_ratings %}
-	You gave {{ r[0] }} a <strong>{{ r[1] }}</strong>!
+	You rated <strong>{{ r[0 ]}}</strong> a <strong>{{ r[1] }}</strong>!
 {% endfor %}
 
 <br><br>
